# const-util

./: Cargo.toml  README.md
src/: concat.rs  lib.rs  mem.rs  result.rs  slice.rs
