[package]
name = "const-util"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Stable implementations for some missing const functions"
repository = "https://github.com/maxdexh/const-util"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "const"]
authors = ["Max Dexheimer <maxdexh03@gmail.com>"]
