[package]
name = "const-util"
version = "2.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Stable implementations for some missing const functions"
repository = "https://github.com/maxdexh/const-util"
documentation = "https://docs.rs/const-util"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "const"]
authors = ["Max Dexheimer <maxdexh03@gmail.com>"]

[dependencies]
generic-upper-bound = "3.1.1"
type-const = "1.1.1"
rustversion = "1.0.21"
